[package]
name = "actions-pg"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
rocket = "0.5.0-dev"
rocket_contrib = { version = "0.5.0-dev", default-features = false, features = ["handlebars_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[patch.crates-io]
rocket = { git = 'https://github.com/SergioBenitez/Rocket', rev = '86d0bdddb289c574c273c823f3e7c6be64202d57' }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', rev = '86d0bdddb289c574c273c823f3e7c6be64202d57' }
